labs/lab_2/hello-world/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.org/server-snippets: "server_name ~^.*$;"
  name: righteous-wave-ingress
spec:
  rules:
    - http:
        paths:
          - path: /righteous-wave(/|$)(.*)
            backend:
              serviceName: righteous-wave-hello-world
              servicePort: 80
